# re101

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.rst  Taskfile.yml  changelog.txt  pyproject.toml  setup.py  test.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
re101/: __init__.py  re101.py
src/re101/: __init__.py
tests/: test_101.py
