[build-system]
requires = ["uv_build>=0.8,<0.12"]
build-backend = "uv_build"

[project]
name = "re101"
version = "1.0.0"
description = "A back-pocket regex cookbook"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Brad Solomon" },
]
keywords = ["regex", "re", "tokenizer", "token"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/bsolomon1124/re101"
Repository = "https://github.com/bsolomon1124/re101"
Issues = "https://github.com/bsolomon1124/re101/issues"
Changelog = "https://github.com/bsolomon1124/re101/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.7",
    "ty>=0.0.1a1",
]

[tool.uv.build-backend]
module-name = "re101"
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["re101"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "D",         # pydocstyle
    "UP",        # pyupgrade
    "B",         # bugbear
    "A",         # builtins shadowing
    "C4",        # comprehensions
    "SIM",       # simplify
    "PT",        # pytest style
    "PTH",       # pathlib
    "PIE",       # misc nitpicks
    "RET",       # return consistency
    "TID",       # tidy imports
    "RUF",       # ruff-specific
]
ignore = [
    "E501",    # long lines; regex literals blow past most limits
    "E741",    # ambiguous variable names (e.g. `l`) — fine in regex helpers
    "D100",    # missing module docstring
    "D101",    # missing class docstring — trivial helper classes
    "D102",    # missing method docstring
    "D103",    # missing function docstring
    "D104",    # missing package docstring
    "D105",    # missing magic-method docstring
    "D107",    # missing __init__ docstring
    "D203",    # 1 blank line before class (conflicts with D211)
    "D213",    # multi-line summary second line (conflicts with D212)
    "RUF001",  # ambiguous characters — the IDN TLD list legitimately mixes scripts
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "D", "PT011"]
"src/re101/__init__.py" = ["N801"]  # Classes `Number`/`Integer`/`Decimal` return Pattern, not instance

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "preserve"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
unresolved-import = "ignore"
